--- a/endutour/package.json
+++ b/endutour/package.json
@@ -23,9 +23,12 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.1",
     "angular-calendar": "^0.23.7",
+    "angular-flash-message": "^3.4.0",
+    "angular2-flash-messages": "^2.0.5",
     "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "date-fns": "^1.29.0",
+    "express-session": "^1.15.6",
     "jquery": "^3.3.1",
     "jspdf": "^1.3.5",
     "rxjs": "^5.5.6",
